Fix new deprecation warning